# CodeCompass

./: .gitignore
plugins/rust/: CMakeLists.txt
plugins/rust/service/: CMakeLists.txt  rust.thrift
plugins/rust/service/include/service/: rustservice.h
plugins/rust/service/src/: plugin.cpp  rustservice.cpp
